fixed museum room y overflow

--- a/src/layouts/MuseumRoom.module.scss
+++ b/src/layouts/MuseumRoom.module.scss
@@ -14,6 +14,7 @@ $offset: $r / 1.8;
 	// start from top of page by excluding at least navbar height
 	margin-top: -66px;
 	overflow-x: hidden;
+	overflow-y: hidden;
 
 	width: 100%;
 	$room-height: 60vh;
